--- a/src/main/resources/static/scss/app.scss
+++ b/src/main/resources/static/scss/app.scss
@@ -10,6 +10,7 @@
 }
 
 .info-badge {
+  color: #ffffff;
   background-color: #9acfea;
   height: 200px;
   width: 200px;
@@ -18,9 +19,14 @@
   float: left;
   box-shadow: 0px 5px 5px #888888;
   &:hover{
-    box-shadow: 0px 5px 5px #aaa;
+    //box-shadow: 0px 5px 5px #aaa;
     cursor: pointer;
+    .content-highlight {
+      font-size: 45px;
+      font-weight: 700;
+    }
   }
+  text-align: center;
 }
 
 #totaldemoratings {
@@ -45,4 +51,20 @@
   background: #D4E157;
   background: radial-gradient(#D4E157 40%, #CDDC39, #AFB42B);
   //border: 4px solid #827717;
+}
+
+.content-highlight {
+  font-family: Chalkboard, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 40px;
+  padding-top: 40px;
+  height: 50%;
+}
+
+.content-description {
+  color: #f9f2f4;
+  font-weight: 500;
+  font-size: 15px;
+  height: 50%;
+  margin: 0 20px;
+  padding-top: 20px;
 }
